force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/onemergefree__MergeLogEntryEvent__e.object-meta.xml
<CustomObject>
    <description>Merge Log Entry Events.</description>
    <label>Merge Log Entry Event</label>
    <pluralLabel>Merge Log Entry Events</pluralLabel>
</CustomObject>