force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__Component__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Component__c</fullName>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>