force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__FunctionalArea__c</fullName>
    <description>The related functional area, e.g. Merge, Normalisation, Settings etc.</description>
    <label>Functional Area</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>