force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__LogType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__LogType__c</fullName>
    <description>The related log type.</description>
    <label>Log Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>