force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__MergeJobId__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeJobId__c</fullName>
    <description>Id of the related Merge Job.</description>
    <label>Merge Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>