force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__Message__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Message__c</fullName>
    <description>Primary log text.</description>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>