force-app/main/default/objects/onemergefree__MergeLogEntryEvent__e/fields/onemergefree__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__StackTrace__c</fullName>
    <description>Where runtime exceptions are encountered, stack traces will be recorded.</description>
    <label>Stack Trace</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>